--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&family=IBM+Plex+Serif:wght@200&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="CSS/style.css">
     <title>index</title>
 </head>
 <body>
+    <header>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Docs</a></li>
+            </ul>
+        </nav>
+    </header>
+    <button class="left-side-button">>></button>
+    <main>
+        <div class="new_note_button">
+            <button>+</button>
+            <p>create a new note</p>
+        </div>
+    </main>
+    <footer>
+        <p>create by Yingyi He</p>
+    </footer>
     
 </body>
 </html>
