add header,fooder, new button, slide out and text area for note.html

--- a/note.html
+++ b/note.html
@@ -12,6 +12,37 @@
     <title>note</title>
 </head>
 <body>
+    <header>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Docs</a></li>
+            </ul>
+        </nav>
+    </header>
+
     
-</body>
+    <div class="left-slide-out">
+        <button class="left-slide-in-button">>></button>
+        <ul class="slide-note">
+            <li><a href="#">note one</a></li>
+            <li><a href="#">note two</a></li>
+        </ul>
+
+    </div>
+    <main>
+        <div class="create-new-note">
+            <button id="new-note-button">+</button>
+            <div id="note-block">
+                <textarea  placeholder="Your Note Here"></textarea>
+                <div class="save-button">
+                    <button id="save-delete">save</button>
+                    <button id="save-delete">delete</button>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+            <p>create by Yingyi He</p>
+    </footer>
 </html>
