--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="#">About</a></li>
+                <li><a href="google.com">About</a></li>
                 <li><a href="#">Docs</a></li>
             </ul>
         </nav>
     </header>
-    <button class="left-side-button">>></button>
+    <button class="left-slide-button">>></button>
     <main>
-        <div class="new_note_button">
-            <button>+</button>
+        <div class="create-new-note">
+            <button id="new-note-button">+</button>
             <p>create a new note</p>
-        </div>
+
     </main>
     <footer>
-        <p>create by Yingyi He</p>
+            <p>create by Yingyi He</p>
     </footer>
     
 </body>
