add media to note.html and index.html

--- a/note.html
+++ b/note.html
@@ -22,13 +22,16 @@
     </header>
 
     
+
     <div class="left-slide-out">
-        <button class="left-slide-in-button">>></button>
+        <div>
+            <button class="left-slide-in-button">>></button>
+            <h1 id="note-id">my notes</h1>
+        </div>
         <ul class="slide-note">
             <li><a href="#">note one</a></li>
             <li><a href="#">note two</a></li>
         </ul>
-
     </div>
     <main>
         <div class="create-new-note">
