Finalize the media for note.html and index.html

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="google.com">About</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">Docs</a></li>
             </ul>
         </nav>
     </header>
     <button class="left-slide-button">>></button>
     <main>
-        <div class="create-new-note">
+        <div class="create-note">
             <button id="new-note-button">+</button>
-            <p>create a new note</p>
+            <p id="new-note-text">create a new note</p>
 
     </main>
     <footer>
